переделываем импорт для использования объединения сущностей в маппинге